<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_font"
    tools:context="fr.stage.neodoctor.Connection" >

    <LinearLayout
        android:id="@+id/Ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="nounours"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ll1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <EditText
        	android:id="@+id/login"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="50dp"
        	android:ems="10"
        	android:text="@string/login"
        	android:inputType="textEmailAddress"/>
        
        <EditText
        	android:id="@+id/mdp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="15dp"
        	android:ems="10"
        	android:text="@string/mdp"
        	android:inputType="textPassword"/>

        <Button
            android:id="@+id/seConnecter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/seConnecter" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/mdpoublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/mdpOublie" />

        <TextView
            android:id="@+id/creerCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:text="@string/creerCompte" />

    </LinearLayout>

</RelativeLayout>