<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_font"
    tools:context="fr.stage.neodoctor.Connection" >

    <LinearLayout
        android:id="@+id/Ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/nounours"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_launcher" />

        <EditText
        	android:id="@+id/login"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="30dp"
        	android:ems="10"
        	android:layout_gravity="center"
        	android:text="@string/login"
        	android:inputType="textEmailAddress"/>
        
        <EditText
        	android:id="@+id/mdp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="20dp"
        	android:ems="10"
        	android:layout_gravity="center"
        	android:text="@string/mdp"
        	android:inputType="textPassword"/>
        
        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:maxLines="5"
            android:gravity="center"
            android:text="@string/condition" />

        <Button
            android:id="@+id/creerCompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/create" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/Ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/nounours2"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/felicitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:maxLines="5"
            android:gravity="center"
            android:text="@string/felicitation" />

        <Button
            android:id="@+id/retourneConnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/seConnecter" />

    </LinearLayout>
    

</RelativeLayout>